feat: Added endpoints to the /styles route.
